# hack

./: Cargo.toml  Casa.css  Casa.html  Contacto.html  Página-1.html  Página-2.css  build.rs  index.html  nicepage.css  rust-toolchain.toml  smartContract.js
blog/: blog.html  enviar-1.html  enviar-2.html  enviar-3.html  enviar-4.html  enviar-5.html  enviar.html
pruebaDeBlock/: Cargo.toml
pruebaDeBlock/src/: lib.rs  rust-toolchain.toml
