#Cargo.toml
[package]
name = "hack"
version = "0.1.0"
edition = "2021"

# Información del autor
[author]
name = "Firsties"

# Descripción del proyecto
description = "Enlace de antecedentes penales de un civil"

[lib]
crate-type = ["cdylib"]

[dependencies]
gstd = { git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2", features = ["debug"] }

[build-dependencies]
gear-wasm-builder = {git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2", features = ["wasm-opt"] }

[dev-dependencies]
gtest = {git = "https://github.com/gear-tech/gear.git", tag = "v1.0.2"}

 